# Find-the-Dot-Game

./: Makefile
app/: CMakeLists.txt
app/include/: helper.h
app/src/: helper.c  main.c
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  buzzer.h  joystick.h  neopixel.h  segDisplay.h
hal/src/: accelerometer.c  buzzer.c  joystick.c  neopixel.c  segDisplay.c
pru-as4/: 14SegFun.c  CMakeLists.txt  neoPixelRGBWSimple.c  sharedDataStruct.c
pru-as4/include/: sharedDataStruct.h
